test/fail/enums_and_variants/wrong_arg_count_scoped_variant.lly
#[
SyntaxError: Some expects 1 args, but got 2.
    from wrong_arg_count_scoped_variant.lly:11
]#

enum Option[A] {
	::Some(A)
	::None
}

var opt: Option[integer] = Option::Some(1, 2)
